resorved conflicts