@@ -1,25 +1,47 @@
 package com.flipfit.business.impl;
 
 import com.flipfit.bean.*;
-import com.flipfit.business.FlipfitCustomerService;
 import com.flipfit.dao.*;
 import com.flipfit.dao.impl.*;
-
+import com.flipfit.business.FlipfitCustomerService;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.time.format.DateTimeFormatter;
+import java.util.stream.Collectors;
+
 import java.util.Scanner;
 
 public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
-    private final FlipfitCardDAO cardDAO = new FlipfitCardDAOImpl();
-    private final FlipfitCustomerDAO customerDAO = new FlipfitCustomerDAOImpl();
-    private final FlipfitGymCenterDAO gymCenterDAO = new FlipfitGymCenterDAOImpl();
-    private final FlipfitSlotDAO slotDAO = new FlipfitSlotDAOImpl();
-    private final FlipfitBookingDAO bookingDAO = new FlipfitBookingDAOImpl();
+    private FlipfitCardDAO cardDAO;
+    private FlipfitCustomerDAO customerDAO;
+    private FlipfitGymCenterDAO gymCenterDAO;
+    private FlipfitSlotDAO slotDAO;
+    private FlipfitBookingDAO bookingDAO;
+    private FlipfitWaitlistDAO waitlistDAO;
     private static final double SLOT_BOOKING_AMOUNT = 500.0;
+
+
+    public FlipfitCustomerServiceImpl() {
+        this.cardDAO= new FlipfitCardDAOImpl();
+        this.customerDAO = new FlipfitCustomerDAOImpl();
+        this.gymCenterDAO = new FlipfitGymCenterDAOImpl();
+        this.slotDAO = new FlipfitSlotDAOImpl();
+        this.bookingDAO = new FlipfitBookingDAOImpl();
+        this.waitlistDAO = new FlipfitWaitlistDAOImpl();
+    }
 
     @Override
     public boolean registerCustomer(FlipfitCustomer customer) {
+        if (customer == null || customer.getEmail() == null || customer.getPassword() == null) {
+            return false;
+        }
+
+        // Check if email already exists
+        if (customerDAO.getCustomerByEmail(customer.getEmail()) != null) {
+            return false;
+        }
+
         return customerDAO.addCustomer(customer);
     }
 
@@ -57,16 +79,14 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
 
         // Get slot information to fetch center ID
         FlipfitSlot slot = slotDAO.getSlotById(slotId);
-        if (slot == null) {
-            System.out.println("Invalid slot selected.");
+        if (slot == null || !slot.isAvailable()) {
             return null;
         }
-
         // Display available cards
         System.out.println("\nSelect a card for payment:");
         for (FlipfitCard card : cards) {
             System.out.println(card.getCardId() + ". Card ending in " +
-                card.getCardNumber().substring(card.getCardNumber().length() - 4));
+                    card.getCardNumber().substring(card.getCardNumber().length() - 4));
         }
 
         Scanner scanner = new Scanner(System.in);
@@ -84,6 +104,10 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
 
         if (!cardFound) {
             System.out.println("Invalid card selected.");
+            return null;
+        }
+        FlipfitCustomer customer = customerDAO.getCustomerById(customerId);
+        if (customer == null) {
             return null;
         }
 
@@ -121,10 +145,104 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
     @Override
     public boolean cancelBooking(int bookingId, int customerId) {
         FlipfitBooking booking = bookingDAO.getBookingById(bookingId);
-        if (booking != null && booking.getCustomerId() == customerId) {
-            return bookingDAO.cancelBooking(bookingId);
+        if (booking == null || booking.getCustomerId() != customerId) {
+            return false;
         }
-        return false;
+
+        if (booking.getStatus() == FlipfitBooking.BookingStatus.CANCELLED) {
+            return false;
+        }
+
+        // Cancel the original booking
+        booking.setStatus(FlipfitBooking.BookingStatus.CANCELLED);
+        bookingDAO.updateBooking(booking);
+
+        // Increase slot availability and check for waitlist
+        FlipfitSlot slot = slotDAO.getSlotById(booking.getSlotId());
+        if (slot != null) {
+            slot.setAvailableSeats(slot.getAvailableSeats() + 1);
+            slotDAO.updateSlot(slot);
+
+            // Promote customer from waitlist if slot is now available
+            FlipfitWaitlist waitlist = waitlistDAO.getWaitlistBySlotId(slot.getSlotId());
+            if (waitlist != null && !waitlist.getCustomerIds().isEmpty()) {
+                Integer nextCustomerId = waitlist.getNextCustomer();
+                if (nextCustomerId != null) {
+                    System.out.println("Promoting customer " + nextCustomerId + " from waitlist for slot " + slot.getSlotId());
+
+                    // Find the existing waitlisted booking for this customer
+                    FlipfitBooking waitlistBooking = bookingDAO.getBookingsByCustomerId(nextCustomerId)
+                            .stream()
+                            .filter(b -> b.getSlotId() == slot.getSlotId() && b.getStatus() == FlipfitBooking.BookingStatus.WAITLISTED)
+                            .findFirst()
+                            .orElse(null);
+
+                    if (waitlistBooking != null) {
+                        // Change the status of the existing booking to CONFIRMED
+                        waitlistBooking.setStatus(FlipfitBooking.BookingStatus.CONFIRMED);
+                        bookingDAO.updateBooking(waitlistBooking);
+
+                        // Update slot availability again for the new confirmed booking
+                        slot.setAvailableSeats(slot.getAvailableSeats() - 1);
+                        slotDAO.updateSlot(slot);
+
+                        waitlistDAO.updateWaitlist(waitlist);
+                    }
+                }
+            }
+        }
+        return true;
+    }
+
+
+
+
+//    @Override
+//    public int addToWaitlist(int customerId, int slotId) {
+//        FlipfitWaitlist waitlist = waitlistDAO.getWaitlistBySlotId(slotId);
+//        if (waitlist == null) {
+//            waitlist = new FlipfitWaitlist();
+//            waitlist.setSlotId(slotId);
+//            waitlistDAO.addWaitlist(waitlist);
+//        }
+//
+//        if (waitlist.getCustomerIds().contains(customerId)) {
+//            return waitlist.getCustomerIds().size();
+//        }
+//
+//        waitlist.getCustomerIds().add(customerId);
+//        waitlistDAO.updateWaitlist(waitlist);
+//        return waitlist.getCustomerIds().size();
+//    }
+
+    @Override
+    public FlipfitBooking addToWaitlist(int customerId, int slotId, LocalDate bookingDate) {
+        FlipfitWaitlist waitlist = waitlistDAO.getWaitlistBySlotId(slotId);
+        FlipfitSlot slot = slotDAO.getSlotById(slotId);
+
+        if (slot == null) {
+            return null;
+        }
+
+        if (waitlist == null) {
+            waitlist = new FlipfitWaitlist();
+            waitlist.setSlotId(slotId);
+            waitlistDAO.addWaitlist(waitlist);
+        }
+
+        if (waitlist.getCustomerIds().contains(customerId)) {
+            System.out.println("You are already on the waitlist for this slot.");
+            return null;
+        }
+
+        waitlist.getCustomerIds().add(customerId);
+        waitlistDAO.updateWaitlist(waitlist);
+
+        FlipfitBooking waitlistBooking = new FlipfitBooking(0, customerId, slotId, slot.getCenterId(), bookingDate, slot.getPrice());
+        waitlistBooking.setStatus(FlipfitBooking.BookingStatus.WAITLISTED);
+        bookingDAO.addBooking(waitlistBooking);
+
+        return waitlistBooking;
     }
 
     @Override
@@ -135,8 +253,8 @@ public class FlipfitCustomerServiceImpl implements FlipfitCustomerService {
     @Override
     public List<FlipfitBooking> viewBookingsByDate(int customerId, LocalDate date) {
         return bookingDAO.getBookingsByCustomerId(customerId).stream()
-            .filter(booking -> booking.getBookingDate().equals(date))
-            .toList();
+                .filter(booking -> booking.getBookingDate().equals(date))
+                .collect(java.util.stream.Collectors.toList());
     }
 
     @Override
